fix SQ warnings